gitops/live-poll-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-poll-app
  namespace: app
spec:
  selector:
    app: live-poll-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
